ribbon_parser/src/snapshots/ribbon_parser__test__function_with_return_type.snap
---
source: ribbon_parser/src/test.rs
description: "() -> i32 {}"
---
body:
  - kind:
      FunctionDeclaration:
        parameters: []
        generic_parameters: []
        return_type:
          kind:
            Type:
              path:
                parts:
                  - kind:
                      Ident: i32
                    span:
                      low: 6
                      hi: 8
              generic_parameters: []
          span:
            low: 6
            hi: 8
        body:
          kind:
            Block: []
          span:
            low: 10
            hi: 11
    span:
      low: 0
      hi: 11
diagnostics: []
