ribbon_parser/src/snapshots/ribbon_parser__test__invalid_function_parameter.snap
---
source: ribbon_parser/src/test.rs
description: "(a:\"test\") => a"
---
body:
  - kind:
      FunctionDeclaration:
        parameters:
          - kind: Invalid
            span:
              low: 1
              hi: 8
        generic_parameters: []
        return_type: ~
        body:
          kind:
            Ident: a
          span:
            low: 14
            hi: 14
    span:
      low: 0
      hi: 14
diagnostics:
  - kind:
      Error:
        ExpectedTypeFoundX: string literal
    span:
      low: 1
      hi: 8
    subdiagnostics: []
