ribbon_parser/src/snapshots/ribbon_parser__test__invalid_path.snap
---
source: ribbon_parser/src/test.rs
description: "hello::"
---
body:
  - kind: Invalid
    span:
      low: 0
      hi: 6
diagnostics:
  - kind:
      Error:
        ExpectedXFoundY:
          - Ident
          - kind: Eof
            source: ""
            span:
              low: 6
              hi: 6
    span:
      low: 6
      hi: 6
    subdiagnostics: []
