ribbon_parser/src/snapshots/ribbon_parser__test__parenthesised_expression.snap
---
source: ribbon_parser/src/test.rs
expression: "& program"
---
body:
  - kind:
      ParenthesisedExpression:
        kind:
          Lit:
            Int: 10
        span:
          low: 1
          hi: 2
    span:
      low: 0
      hi: 3
diagnostics: []
